# botter_api

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/application/: dependencies.py
app/core/: utils.py
app/domain/tw/: services.py
app/infrastructure/database/: __init__.py  table.py  tables.py
app/infrastructure/database/alembic/: env.py  script.py.mako
app/infrastructure/database/base/: __init__.py  error.py  errors.py  mixins.py  repository.py  session.py  sqltype.py  sqltypes.py  table.py
app/infrastructure/database/base/table/: mixin.py  table.py
app/infrastructure/database/migrations/: env.py
app/presentation/api/v1/auth/: tw_oauth.py
docker/: docker-compose.yml
docker/nginx/: nginx.local.conf
docker/redis/: redis.conf
